	  pointers in the userspace interface.  That is inefficient because the
	  first thing that those memory management functions do is to trap back
	  into the kernel to get the current PID.  Worse, that operation can be
	  fatal is certain fragile situations such as when a task is exiting.
	  The solution is to remove all of the memory management function calls
	  from the interface.  Instead, the interface exports the users pace
	  heap structure and then kernel size implementations of those memory
	  management functions will operate on the userspace heap structure.
	  This avoids the unnecessary system calls and, more importantly,
	  failures do to freeing memory when a test exits (2015-07-10).
	* libc/netdb:  Move netdb functions from lib/net to lib/netdb.  Move
	  the DNS client logic from apps/netutils/dnscient to libc/netdb.
	  Add support to gethostbyname() so that it will attempt a DNS host
	  lookup before consulting the host table (if so enabled) (2015-07-10).
	* arch/arm/src/samdl/chip/saml_usb.h:  Several fixes to register
	  definitions and types. From Janne Rosberg (2015-07-10).
	* include/nuttx/net/ and libc/netdb: Repartitioning of DNS client
	  logic in preparation for IPv6 support (2015-07-12):
	  - Rename include/nuttx/net/dnsclient.h to dns.h
	  - Move internal DNS prototypes from dns.h to libc/netdb/lib_dns.h
	  - Global standard DNS definitions from libc/netdb/dns_soccket.c to
	    dns.h
	  - Eliminate dns_gethostip().  This is now an internal part of
	    gethostbyname()
	  - Eliminate interface dns_whois().  Not needed in this new context.
	* include/nuttx/net/ and libc/netdb: Modifications to DNS client logic
	  and to dns_get/setserver() interfaces to support DNS clients at IPv6
	  addresses (still no support for resolution to IPv6 addresses)
	  (2015-07-12).
	* include/nuttx/net/ and libc/netdb: Implement the low-level network DNS
	  packet protocol to request and receive IPv6 address mappings
	  (2015-07-12).
 